--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,6 +7,7 @@
     <div class="col">
         <h1 class="display-5">Bienvenido {{ user_name }}</h1>
         <a href="{{ url_for('new_visit') }}" class="btn btn-primary">Crear Nueva Visita</a>
+        <a href="/importar_visitas" class="btn btn-warning ms-2">Importar visitas masivamente</a>
     </div>
 </div>
 
